--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@700&family=Roboto:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap');
 *{
     margin: 0;
     padding: 0;
@@ -6,8 +6,8 @@
     font-family: 'Roboto', sans-serif;
 }
 body{
-    background: rgb(224, 224, 224);
-    margin: 0;
+    background:white;
+    margin: 0 auto;
 }
 .navbide{
     padding: 1em;
@@ -19,7 +19,7 @@ body{
 .navbide .logo{
     text-decoration: none;
     font-weight: bold;
-    color: back;
+    color: black;
     font-size: 1.2em;
 }
 .navbide .logo span{
@@ -36,9 +36,6 @@ ul{
     margin:0;
     padding: 0;
 }
-
-
-
 .navbide .container{
     
     display: flex;
@@ -60,6 +57,7 @@ ul{
 }
 .hero{
     position: relative;
+    
 }
 .hero .container .bg-covid{
     width: 100%;
@@ -102,6 +100,7 @@ nav{
     left: 0;
     top :0;
     background: rgb(126, 126, 126);
+    box-shadow:0 0 6px rgb(126, 126, 126,1);
     height: 100vh;
     padding: 1em;   
 }
@@ -112,7 +111,7 @@ nav .primary-nav li a{
     color: white;
     text-decoration: none;
     display: block;
-    padding: .5em;
+    padding: 12px 8px;
     font-size: 1em;
     position: relative;
 }
@@ -129,6 +128,10 @@ nav .primary-nav li a{
     position: static;
     padding-left: 20px;
     display: none;
+}
+.navbide nav ul li:hover{
+    border-left:1px solid #444444;
+    box-shadow:0 0 6px rgb(255, 255, 255,0.5);
 }
 
 .navbide nav li a i{
@@ -184,9 +187,135 @@ nav .secondary-nav button{
     font-size: 1.5em;
     cursor: pointer;
 }
+.Graphing{
+    display: block;
+
+}
+
+.radius{
+    padding: 10px;
+    border: 1px solid #dadce0;
+    border-radius: 10px;
+    margin-bottom: 2px;
+    background: #ffffff;
+}
+#chart{
+    width:100%;
+    margin: 0 auto;
+    display: inline-block;
+}
+.title{
+    border-bottom: 1px solid #c1bfbfb3;
+    text-align: center;
+}
+.s2 .Graphing .TOP table{
+    font-size: 0.75em;
+    width: 100%;
+}
+.s2 .Graphing .TOP table thead th{
+    text-align: center;
+}
+.s2 .Graphing .TOP table tbody td{
+    padding: 2px 2px;
+    text-align: center;
+
+}
+.s3 .mains3 .k5{
+    width: 100%;
+}
+.list5k{
+    font-size: 0.75em;
+    width: 100%;
+}
+.list5k span{
+    font-size: 1.2em;
+}
+.list5k ul li{
+    padding: 3px 1px;
+}
+.list5k ul li a{
+    text-decoration: none;
+    color: blue;
+}
+.list5k ul li p{
+    padding: 0 17px;
+    color: red;
+}
+.list5k ul li p .p-1{
+    display: none;
+}
+.pad-1{
+    padding: 10px 0;
+}
+.ct-1{
+    padding: 10px 0;
+    border-bottom:1px solid #c1bfbfb3 ;
+}
+.ct-1 a{
+    display: flex;
+    font-size: 0.75em;
+    text-decoration: none;
+}
+.ct-1 a p{
+    margin: auto 0;
+    width:70%;
+}
+.ct-1 .rightimg{
+    width: 25%;
+    height: 80px;
+    
+}
+.ct-1 a .rightimg img{
+    border-radius: 10px;
+}
+.footer
+{   
+    border-radius: 10px;
+    width:100%;
+    background-color: #e6e7e9;
+    height: auto;
+   
+}
+.ff-1{
+    display: flex;
+    flex-direction: column;
+}
+.ff-1 .ctn-1{
+    width: 100%;
+    text-align: center;
+}
+.ff-1 .ctn-2{
+    width: 50%;
+    margin:0 auto;
+}
+.ff-1 .ctn-2 .ttlh{
+    text-align: center;
+    
+}
+.design{
+    text-align: center;
+}
+#particles-js canvas{
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+/*------------------------------------------------------------------------------------------------------------------------------------------*/
+/*------------------------------------------------------------------------------------------------------------------------------------------*/
+/*------------------------------------------------------------------------------------------------------------------------------------------*/
+/*------------------------------------------------------------------------------------------------------------------------------------------*/
 @media only screen and (min-width: 768px) {
+    nav{
+        box-shadow: none;
+    }
+    .navbide nav ul li:hover{
+        border-left: none;
+    }
     .mobile-menu , .mobile-menu-exit{
         display: none;
+    }
+    .navbide{
+        padding: 10px 20px;
     }
     .navbide .container{
         display: grid;
@@ -195,7 +324,7 @@ nav .secondary-nav button{
     } 
     .navbide nav{
         display: flex;
-        justify-content: space-between;
+        position: relative;
         background: none;
         position: unset;
         height: auto;
@@ -213,10 +342,16 @@ nav .secondary-nav button{
         padding: .1em 1em;
     }
     .navbide nav ul ul{
+        padding-top: 10px;
         position: absolute;
         display: block;
         opacity: 0;
         visibility: hidden;
+
+    }
+    .navbide .secondary-nav{
+        position: absolute;
+        right: 0;
     }
     .navbide nav ul ul li a{
         padding: 1em 1em;
@@ -266,7 +401,7 @@ nav .secondary-nav button{
         color: blue;
         font-size: 1em;
     }
-    nav .secondary-nav .seach input{
+    nav .secondary-nav .seach .search{
         display: none;
     }
     .navbide nav .primary-nav{
@@ -275,27 +410,128 @@ nav .secondary-nav button{
     .hero .container .right-col{
         font-size: 1em;
     }
+
+    nav .primary-nav.hide-nav{
+        display: none;
+    }
+    nav .secondary-nav .seach .search.unhide-search{
+        display: inline-block;
+    }
+    .Graphing{
+        display: block;
+        width:100%;
+        height:100%;
+    }
+    .s2{
+
+        display: flex;
+        position: relative;
+    }   
+    .Graphing{
+        width: 50%;
+        height: auto;
+    }
+
+    .s2 .Graphing .TOP .title{
+        text-align: center;
+    }
+    .s2{
+        margin-top: 20px;
+    }
+    .s2 .Graphing .listtop{
+        padding-top: 10px;
+    }
+    
+    .hero{
+        border-radius: 10px;
+        max-width: 1250px;
+        max-height: 250px;
+        margin: auto;
+        overflow: hidden;
+    }
+    .s2{
+        max-width: 1250px;
+        margin: auto;
+        overflow: hidden;
+    }
+    .s2 .Graphing{
+        width: 60%;
+        height: auto;
+    }
+    .s2 .Graphing .TOP{
+        width: 100%;
+    }
+    .s2 .Graphing .TOP table tbody td{
+        padding: 3.8px 5px;
+        text-align: center;
+    }
+    .s2 .tintuc{
+        position: absolute;
+        right: 0;
+        width: 35%;
+    }
+    .ct-1 .rightimg{
+        width: 30%;
+        height: 90px;
+        
+    }
+    .s3 {
+        position: relative;
+        max-width: 1250px;
+        display: flex;
+        margin: auto;
+        overflow: hidden;
+    }
+    .s3 .phongchong{
+        width: 60%;
+    }
+    .s3 .mains3{
+        position: absolute;
+        right: 0;
+        width: 35%;
+    }
+    .s4{
+        max-width: 1250px;
+        margin: auto;
+        display: flex;
+        overflow: hidden;
+    }
+    .s4-1{
+        width: 60%;
+    }
+    .ff-1{
+        flex-direction: row;
+    }
+    .ff-1 .ctn-1{
+        width: 100%;
+        text-align: none;
+    }
+    .ff-1 .ctn-2 .title{
+        border: none;
+    }
+    .ff-1 .ctn-2{
+        width: 50%;
+        margin:0 auto;
+    }
+    .ff-1 .ctn-2 .ttlh{
+        text-align: none;
+        
+    }
     
 }
+
+/*------------------------------------------------------------------------------------------------------------------------------------------*/
+/*------------------------------------------------------------------------------------------------------------------------------------------*/
+/*------------------------------------------------------------------------------------------------------------------------------------------*/
+/*------------------------------------------------------------------------------------------------------------------------------------------*/
 @media only screen and (min-width: 1080px) {
     .hero .container .left-col .content{
-        font-size: 2em;
+        font-size: 1.25em;
     }
     .hero .container .left-col .subhead{
         position: absolute;
         left: 10%;
-        font-size: 2em;
-    }
-    .hero .container .right-col{
-        font-size: 1.5em;
-        padding: 0;   
-    }
-    .hero .container .right-col{
-        top:10%
-    }
-    .hero .container .right-col .colunm{
-        flex-direction: row;
- 
+        font-size: 1.75em;
     }
     nav .secondary-nav .seach input{
         display: inline;
@@ -307,6 +543,45 @@ nav .secondary-nav button{
     }
     nav ul li a{
         font-size: 1.5em;
+    }
+    nav .secondary-nav i{
+        font-size: 2.25em;
+    }
+    nav .secondary-nav .seach .search{
+        display: inline-block;
+    }
+    .s2 .Graphing{
+        width: 65%;
+        height: auto;
+        
+    }
+    .s2 .tintuc{
+        position: absolute;
+        right: 0;
+        width: 30%;
+    }
+    .s3 {
+        position: relative;
+        max-width: 1250px;
+        display: flex;
+        margin: auto;
+    }
+    .s3 .phongchong{
+        width: 65%;
+    }
+    .s3 .mains3{
+        width: 30%;
+    }
+    .s4-1{
+        width: 65%;
+    }
+    .s4 .s4-1 .list5k ul li p {
+        display: inline;
+        padding: 0px;
+        font-size: 1.25em;
+    }
+    .list5k ul li p .p-1{
+        display: inline;
     }
 
 }
